# buzzy-conversions-homepage

./: .dockerignore  .replit  Dockerfile  Procfile  README.md  backend_server.py  excel_to_pdf_converter.py  html_to_pdf_converter.py  next.config.ts  nixpacks.toml  package-lock.json  package.json  pdf_to_excel_converter.py  pdf_to_jpg_converter.py  pdf_to_powerpoint_converter.py  pdf_to_word_converter.py  powerpoint_to_pdf_converter.py  pyproject.toml  railway-env-vars.md  railway.toml  render.yaml  replit.md  requirements.txt  tailwind.config.js  tsconfig.json  word_to_pdf_converter.py
api/: pdf_converter.py  word_to_pdf_api.py  word_to_pdf_converter.py
attached_assets/: Pasted--Error-ENOENT-no-such-file-or-directory-open-home-runner-workspace-next-static-development--1756846959337_1756846959339.txt  Pasted--runner-workspace-src-app-global-error-tsx-Error-evaluating-Node-js-code-ReferenceError-magic--1756851269457_1756851269459.txt  Pasted-Download-error-Errno-2-No-such-file-or-directory-home-runner-workspace-api-outputs-GYM-Workout-1756838807312_1756838807314.txt  Pasted-import-React-from-react-import-motion-from-framer-motion-import-RefreshCw-from-lucide-1756689507310_1756689507310.txt  Pasted-stage-0-RUN-nix-env-if-nixpacks-nixpkgs-f69ae4816bc1b501460ad2c0c63ed0cc4a9b876e-nix-nix-colle-1757622698877_1757622698880.txt
backend/: requirements.txt  test_conversion.py
backend/src/: api_server.py  (+1 more)
outputs/: 2nd_Assessment_Class_2_2024_Grand_Total1_1fabb721-ea07-47d4-b6e4-40b1b17a8e4e.docx  GYM_Workout_Plan_Month_2_week_1PPL_083fbc1b-e216-4090-a140-ab6048a623f7.docx  (+2 more)
(+54 files in other folders)
