[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "camelot-py>=1.0.9",
    "docx2pdf>=0.1.8",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pdf2docx>=0.5.8",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.7",
    "pillow>=11.3.0",
    "pymupdf>=1.26.4",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "reportlab>=4.4.3",
    "requests>=2.32.5",
    "tabula-py>=2.10.0",
    "weasyprint>=66.0",
]
